--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-14
     name: Ruby ${{ matrix.ruby }}
     strategy:
       matrix:
@@ -29,4 +29,3 @@ jobs:
       run: make lint
     - name: Run tests
       run: make test
-      
