--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
         bundler-cache: true
     - name: Run the default task
       run: bundle exec rake
+    - name: Run Bundle install
+      run: make install
     - name: Run Rubocop Linter
       run: make lint
     - name: Run tests
