--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@
 /pkg/
 /spec/reports/
 /tmp/
+
+############################
+# OS X
+############################
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+.Spotlight-V100
+.Trashes
+._*
