--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,14 @@ Style/StringLiterals:
 
 Style/StringLiteralsInInterpolation:
   Enabled: true
-  EnforcedStyle: double_quotes
+  EnforcedStyle: single_quotes
 
 Layout/LineLength:
   Max: 120
+
+Metrics/MethodLength:
+  Enabled: false
+
+Lint/EmptyBlock:
+  Enabled: true
+  
